updated plugins API documentation

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -52,7 +52,8 @@ This is a complete list of available classes:
 - [`Piwik\TaskScheduler`](Piwik/TaskScheduler.md) &mdash; Manages scheduled task execution.
 - [`Piwik\Tracker\Visit`](Piwik/Tracker/Visit.md) &mdash; Class used to handle a Visit.
 - [`Piwik\Url`](Piwik/Url.md) &mdash; Provides URL related helper methods.
-- [`Piwik\UrlHelper`](Piwik/UrlHelper.md) &mdash; Class UrlHelper
+- [`Piwik\UrlHelper`](Piwik/UrlHelper.md) &mdash; Contains less commonly needed URL helper methods.
 - [`Piwik\Version`](Piwik/Version.md) &mdash; Piwik version information.
-- [`Piwik\View`](Piwik/View.md) &mdash; View class to render the user interface
+- [`Piwik\View`](Piwik/View.md) &mdash; Encapsulates and manages a [Twig](http://twig.sensiolabs.org/) template.
 - [`Piwik\ViewDataTable\Factory`](Piwik/ViewDataTable/Factory.md) &mdash; This class is used to load (from the API) and customize the output of a given DataTable.
+- [`Piwik\WidgetsList`](Piwik/WidgetsList.md) &mdash; Manages the global list of reports that can be displayed as dashboard widgets.
