--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -65,6 +65,7 @@ Index
 - [`addColumn()`](Piwik/RankingQuery.md#addColumn) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
 - [`addForm()`](Piwik/View.md#addForm) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`assign()`](Piwik/View.md#assign) &mdash; _Method in class_ [`View`](Piwik/View.md)
+- [`add()`](Piwik/WidgetsList.md#add) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)
 
 ### B
 
@@ -140,7 +141,6 @@ Index
 - [`exec()`](Piwik/Db.md#exec) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`error()`](Piwik/Log.md#error) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
 - [`execute()`](Piwik/RankingQuery.md#execute) &mdash; _Method in class_ [`RankingQuery`](Piwik/RankingQuery.md)
-- [`extractSearchEngineInformationFromUrl()`](Piwik/UrlHelper.md#extractSearchEngineInformationFromUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 
 ### F
 
@@ -353,13 +353,13 @@ Index
 - [`getQueryStringFromParameters()`](Piwik/Url.md#getQueryStringFromParameters) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getReferrer()`](Piwik/Url.md#getReferrer) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`getQueryStringWithExcludedParameters()`](Piwik/UrlHelper.md#getQueryStringWithExcludedParameters) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
-- [`getLossyUrl()`](Piwik/UrlHelper.md#getLossyUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 - [`getParseUrlReverse()`](Piwik/UrlHelper.md#getParseUrlReverse) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 - [`getArrayFromQueryString()`](Piwik/UrlHelper.md#getArrayFromQueryString) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 - [`getParameterFromQueryString()`](Piwik/UrlHelper.md#getParameterFromQueryString) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 - [`getPathAndQueryFromUrl()`](Piwik/UrlHelper.md#getPathAndQueryFromUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
 - [`getTemplateFile()`](Piwik/View.md#getTemplateFile) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`getTemplateVars()`](Piwik/View.md#getTemplateVars) &mdash; _Method in class_ [`View`](Piwik/View.md)
+- [`get()`](Piwik/WidgetsList.md#get) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)
 
 ### H
 
@@ -414,8 +414,7 @@ Index
 - [`isTaskBeingExecuted()`](Piwik/TaskScheduler.md#isTaskBeingExecuted) &mdash; _Method in class_ [`TaskScheduler`](Piwik/TaskScheduler.md)
 - [`isHostKnownAliasHost()`](Piwik/Tracker/Visit.md#isHostKnownAliasHost) &mdash; _Method in class_ [`Visit`](Piwik/Tracker/Visit.md)
 - [`isLocalUrl()`](Piwik/Url.md#isLocalUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
-- [`isLookLikeUrl()`](Piwik/UrlHelper.md#isLookLikeUrl) &mdash; _Method in class_ [`UrlHelper`](Piwik/UrlHelper.md)
-- [`initializeTwig()`](Piwik/View.md#initializeTwig) &mdash; _Method in class_ [`View`](Piwik/View.md)
+- [`isDefined()`](Piwik/WidgetsList.md#isDefined) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)
 
 ### L
 
@@ -510,6 +509,7 @@ Index
 - [`redirectToUrl()`](Piwik/Url.md#redirectToUrl) &mdash; _Method in class_ [`Url`](Piwik/Url.md)
 - [`render()`](Piwik/View.md#render) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`renderReport()`](Piwik/ViewDataTable/Factory.md#renderReport) &mdash; _Method in class_ [`Factory`](Piwik/ViewDataTable/Factory.md)
+- [`remove()`](Piwik/WidgetsList.md#remove) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)
 
 ### S
 
@@ -614,6 +614,7 @@ Index
 - [`warning()`](Piwik/Log.md#warning) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
 - [`Week`](Piwik/Period/Week.md) &mdash; _Class in namespace_ [`Piwik\Period`](Piwik/Period)
 - [`Weekly`](Piwik/ScheduledTime/Weekly.md) &mdash; _Class in namespace_ [`Piwik\ScheduledTime`](Piwik/ScheduledTime)
+- [`WidgetsList`](Piwik/WidgetsList.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 
 ### Y
 
@@ -653,3 +654,4 @@ Index
 - [`__construct()`](Piwik/View.md#__construct) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`__set()`](Piwik/View.md#__set) &mdash; _Method in class_ [`View`](Piwik/View.md)
 - [`__get()`](Piwik/View.md#__get) &mdash; _Method in class_ [`View`](Piwik/View.md)
+- [`_reset()`](Piwik/WidgetsList.md#_reset) &mdash; _Method in class_ [`WidgetsList`](Piwik/WidgetsList.md)
