updated plugins API documentation

--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -3,15 +3,16 @@ Classes
 
 This is a complete list of available classes:
 
-- [`Piwik\API\Request`](Piwik/API/Request.md) &mdash; An API request is the object used to make a call to the API and get the result.
+- [`Piwik\API\Request`](Piwik/API/Request.md) &mdash; Dispatches API requests to the appropriate API method.
 - [`Piwik\Archive`](Piwik/Archive.md) &mdash; The **Archive** class is used to query archive data.
 - [`Piwik\ArchiveProcessor\Day`](Piwik/ArchiveProcessor/Day.md) &mdash; This class
 - [`Piwik\ArchiveProcessor\Period`](Piwik/ArchiveProcessor/Period.md) &mdash; This class provides generic methods to archive data for a period (week / month / year).
 - [`Piwik\Common`](Piwik/Common.md) &mdash; Contains helper methods used by both Piwik Core and the Piwik Tracking engine.
 - [`Piwik\Config`](Piwik/Config.md) &mdash; Singleton that provides read &amp; write access to Piwik&#039;s INI configuration.
 - [`Piwik\DataTable`](Piwik/DataTable.md) &mdash; The primary data structure used to store analytics data in Piwik.
-- [`Piwik\DataTable\Map`](Piwik/DataTable/Map.md) &mdash; The DataTable Map is a way to store an array of dataTable.
-- [`Piwik\DataTable\Row`](Piwik/DataTable/Row.md) &mdash; A DataTable is composed of rows.
+- [`Piwik\DataTable\Map`](Piwik/DataTable/Map.md) &mdash; Stores an array of DataTables indexed by one type of DataTable metadata (such as site ID or period).
+- [`Piwik\DataTable\Row`](Piwik/DataTable/Row.md) &mdash; This is what a [DataTable](#) is composed of.
+- [`Piwik\DataTable\Simple`](Piwik/DataTable/Simple.md) &mdash; A [DataTable](#) where every row has two columns: **label** and **value**.
 - [`Piwik\Date`](Piwik/Date.md) &mdash; Utility class that wraps date/time related PHP functions.
 - [`Piwik\Db`](Piwik/Db.md) &mdash; Helper class that contains SQL related helper functions.
 - [`Piwik\Filesystem`](Piwik/Filesystem.md) &mdash; Contains helper functions that involve the filesystem.
