--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -47,6 +47,7 @@ Index
 - [`addColumn()`](Piwik/DataTable/Row.md#addColumn) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`addColumns()`](Piwik/DataTable/Row.md#addColumns) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`addMetadata()`](Piwik/DataTable/Row.md#addMetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`addRowsFromArray()`](Piwik/DataTable/Simple.md#addRowsFromArray) &mdash; _Method in class_ [`Simple`](Piwik/DataTable/Simple.md)
 - [`adjustForTimezone()`](Piwik/Date.md#adjustForTimezone) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`addDay()`](Piwik/Date.md#addDay) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`addHour()`](Piwik/Date.md#addHour) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
@@ -527,6 +528,7 @@ Index
 - [`setMetadata()`](Piwik/DataTable/Row.md#setMetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`sumRow()`](Piwik/DataTable/Row.md#sumRow) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`sumRowMetadata()`](Piwik/DataTable/Row.md#sumRowMetadata) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
+- [`Simple`](Piwik/DataTable/Simple.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable)
 - [`setTimezone()`](Piwik/Date.md#setTimezone) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`setTime()`](Piwik/Date.md#setTime) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`setDay()`](Piwik/Date.md#setDay) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
