--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -40,6 +40,8 @@ Index
 - [`addRowsFromSerializedArray()`](Piwik/DataTable.md#addRowsFromSerializedArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`addRowsFromArray()`](Piwik/DataTable.md#addRowsFromArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`addRowsFromSimpleArray()`](Piwik/DataTable.md#addRowsFromSimpleArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`AddColumnsProcessedMetrics`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`AddColumnsProcessedMetricsGoal`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`applyQueuedFilters()`](Piwik/DataTable/Map.md#applyQueuedFilters) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`addTable()`](Piwik/DataTable/Map.md#addTable) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`addDataTable()`](Piwik/DataTable/Map.md#addDataTable) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
@@ -138,6 +140,7 @@ Index
 
 - [`enableRecursiveSort()`](Piwik/DataTable.md#enableRecursiveSort) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`enableRecursiveFilters()`](Piwik/DataTable.md#enableRecursiveFilters) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`enableRecursive()`](Piwik/DataTable/Filter.md#enableRecursive) &mdash; _Method in class_ [`Filter`](Piwik/DataTable/Filter.md)
 - [`enableRecursiveSort()`](Piwik/DataTable/Map.md#enableRecursiveSort) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`exec()`](Piwik/Db.md#exec) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`error()`](Piwik/Log.md#error) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
@@ -149,6 +152,11 @@ Index
 - [`forceSave()`](Piwik/Config.md#forceSave) &mdash; _Method in class_ [`Config`](Piwik/Config.md)
 - [`filter()`](Piwik/DataTable.md#filter) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`fromSerializedArray()`](Piwik/DataTable.md#fromSerializedArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`Filter`](Piwik/DataTable/Filter.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable)
+- [`filter()`](Piwik/DataTable/Filter.md#filter) &mdash; _Method in class_ [`Filter`](Piwik/DataTable/Filter.md)
+- [`filterSubTable()`](Piwik/DataTable/Filter.md#filterSubTable) &mdash; _Method in class_ [`Filter`](Piwik/DataTable/Filter.md)
+- [`filter()`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md#filter) &mdash; _Method in class_ [`AddColumnsProcessedMetrics`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md)
+- [`filter()`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md#filter) &mdash; _Method in class_ [`AddColumnsProcessedMetricsGoal`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md)
 - [`filter()`](Piwik/DataTable/Map.md#filter) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`factory()`](Piwik/Date.md#factory) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`fetchAll()`](Piwik/Db.md#fetchAll) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
@@ -633,6 +641,9 @@ Index
 - [`__destruct()`](Piwik/DataTable.md#__destruct) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`__sleep()`](Piwik/DataTable.md#__sleep) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`__toString()`](Piwik/DataTable.md#__toString) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`__construct()`](Piwik/DataTable/Filter.md#__construct) &mdash; _Method in class_ [`Filter`](Piwik/DataTable/Filter.md)
+- [`__construct()`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md#__construct) &mdash; _Method in class_ [`AddColumnsProcessedMetrics`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md)
+- [`__construct()`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md#__construct) &mdash; _Method in class_ [`AddColumnsProcessedMetricsGoal`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md)
 - [`__toString()`](Piwik/DataTable/Map.md#__toString) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`__construct()`](Piwik/DataTable/Row.md#__construct) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`__sleep()`](Piwik/DataTable/Row.md#__sleep) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
