--- a/docs/master/1. Namespaces.md
+++ b/docs/master/1. Namespaces.md
@@ -7,6 +7,7 @@ This is a complete list of available namespaces:
 - [`Piwik\API`](Piwik/API)
 - [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
 - [`Piwik\DataTable`](Piwik/DataTable)
+- [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`Piwik\Menu`](Piwik/Menu)
 - [`Piwik\Period`](Piwik/Period)
 - [`Piwik\Plugin`](Piwik/Plugin)
