updated plugins API documentation

--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -437,7 +437,6 @@ Index
 - [`mb_substr()`](Piwik/Common.md#mb_substr) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`mb_strlen()`](Piwik/Common.md#mb_strlen) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
 - [`mb_strtolower()`](Piwik/Common.md#mb_strtolower) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
-- [`$metadata()`](Piwik/DataTable.md#$metadata) &mdash; _Property in class_ [`DataTable`](Piwik/DataTable.md)
 - [`makeFromIndexedArray()`](Piwik/DataTable.md#makeFromIndexedArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`mergeSubtables()`](Piwik/DataTable.md#mergeSubtables) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`makeFromSimpleArray()`](Piwik/DataTable.md#makeFromSimpleArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
@@ -527,6 +526,8 @@ Index
 - [`sort()`](Piwik/DataTable.md#sort) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setMaximumDepthLevelAllowedAtLeast()`](Piwik/DataTable.md#setMaximumDepthLevelAllowedAtLeast) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setMetadata()`](Piwik/DataTable.md#setMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`setMetadataValues()`](Piwik/DataTable.md#setMetadataValues) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`setAllTableMetadata()`](Piwik/DataTable.md#setAllTableMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setMaximumAllowedRows()`](Piwik/DataTable.md#setMaximumAllowedRows) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`setKeyName()`](Piwik/DataTable/Map.md#setKeyName) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`sumSubtable()`](Piwik/DataTable/Row.md#sumSubtable) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
