--- a/docs/master/2. Classes.md
+++ b/docs/master/2. Classes.md
@@ -4,7 +4,7 @@ Classes
 This is a complete list of available classes:
 
 - [`Piwik\API\Request`](Piwik/API/Request.md) &mdash; Dispatches API requests to the appropriate API method.
-- [`Piwik\Archive`](Piwik/Archive.md) &mdash; The **Archive** class is used to query archive data.
+- [`Piwik\Archive`](Piwik/Archive.md) &mdash; The **Archive** class is used to query cached analytics statistics (termed &quot;archive data&quot;).
 - [`Piwik\ArchiveProcessor\Day`](Piwik/ArchiveProcessor/Day.md) &mdash; This class
 - [`Piwik\ArchiveProcessor\Period`](Piwik/ArchiveProcessor/Period.md) &mdash; This class provides generic methods to archive data for a period (week / month / year).
 - [`Piwik\Common`](Piwik/Common.md) &mdash; Contains helper methods used by both Piwik Core and the Piwik Tracking engine.
