--- a/docs/master/4. Index.md
+++ b/docs/master/4. Index.md
@@ -42,6 +42,9 @@ Index
 - [`addRowsFromSimpleArray()`](Piwik/DataTable.md#addRowsFromSimpleArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`AddColumnsProcessedMetrics`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`AddColumnsProcessedMetricsGoal`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`AddSummaryRow`](Piwik/DataTable/Filter/AddSummaryRow.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`appendPercentSign()`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md#appendPercentSign) &mdash; _Method in class_ [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md)
+- [`addSummaryRow()`](Piwik/DataTable/Filter/Truncate.md#addSummaryRow) &mdash; _Method in class_ [`Truncate`](Piwik/DataTable/Filter/Truncate.md)
 - [`applyQueuedFilters()`](Piwik/DataTable/Map.md#applyQueuedFilters) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`addTable()`](Piwik/DataTable/Map.md#addTable) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`addDataTable()`](Piwik/DataTable/Map.md#addDataTable) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
@@ -73,6 +76,9 @@ Index
 ### B
 
 - [`build()`](Piwik/Archive.md#build) &mdash; _Method in class_ [`Archive`](Piwik/Archive.md)
+- [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`beautify()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#beautify) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
+- [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`beforeLoadDataTable()`](Piwik/Plugin/Visualization.md#beforeLoadDataTable) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
 - [`beforeGenericFiltersAreAppliedToLoadedDataTable()`](Piwik/Plugin/Visualization.md#beforeGenericFiltersAreAppliedToLoadedDataTable) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
 - [`beforeRender()`](Piwik/Plugin/Visualization.md#beforeRender) &mdash; _Method in class_ [`Visualization`](Piwik/Plugin/Visualization.md)
@@ -82,6 +88,14 @@ Index
 
 - [`Common`](Piwik/Common.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
 - [`Config`](Piwik/Config.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
+- [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`calculate()`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md#calculate) &mdash; _Method in class_ [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md)
+- [`ColumnCallbackAddColumn`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`ColumnCallbackAddColumnPercentage`](Piwik/DataTable/Filter/ColumnCallbackAddColumnPercentage.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`ColumnCallbackAddColumnQuotient`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`ColumnCallbackAddMetadata`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`ColumnCallbackDeleteRow`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`ColumnDelete`](Piwik/DataTable/Filter/ColumnDelete.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`$c()`](Piwik/DataTable/Row.md#$c) &mdash; _Property in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`cleanPostSerialize()`](Piwik/DataTable/Row.md#cleanPostSerialize) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`compareElements()`](Piwik/DataTable/Row.md#compareElements) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
@@ -141,6 +155,7 @@ Index
 - [`enableRecursiveSort()`](Piwik/DataTable.md#enableRecursiveSort) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`enableRecursiveFilters()`](Piwik/DataTable.md#enableRecursiveFilters) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`enableRecursive()`](Piwik/DataTable/Filter.md#enableRecursive) &mdash; _Method in class_ [`Filter`](Piwik/DataTable/Filter.md)
+- [`ExcludeLowPopulation`](Piwik/DataTable/Filter/ExcludeLowPopulation.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`enableRecursiveSort()`](Piwik/DataTable/Map.md#enableRecursiveSort) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`exec()`](Piwik/Db.md#exec) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`error()`](Piwik/Log.md#error) &mdash; _Method in class_ [`Log`](Piwik/Log.md)
@@ -157,6 +172,17 @@ Index
 - [`filterSubTable()`](Piwik/DataTable/Filter.md#filterSubTable) &mdash; _Method in class_ [`Filter`](Piwik/DataTable/Filter.md)
 - [`filter()`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md#filter) &mdash; _Method in class_ [`AddColumnsProcessedMetrics`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md)
 - [`filter()`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md#filter) &mdash; _Method in class_ [`AddColumnsProcessedMetricsGoal`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md)
+- [`filter()`](Piwik/DataTable/Filter/AddSummaryRow.md#filter) &mdash; _Method in class_ [`AddSummaryRow`](Piwik/DataTable/Filter/AddSummaryRow.md)
+- [`filter()`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md#filter) &mdash; _Method in class_ [`ColumnCallbackAddColumn`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md)
+- [`filter()`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md#filter) &mdash; _Method in class_ [`ColumnCallbackAddColumnQuotient`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md)
+- [`filter()`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md#filter) &mdash; _Method in class_ [`ColumnCallbackAddMetadata`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md)
+- [`filter()`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md#filter) &mdash; _Method in class_ [`ColumnCallbackDeleteRow`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md)
+- [`filter()`](Piwik/DataTable/Filter/ColumnDelete.md#filter) &mdash; _Method in class_ [`ColumnDelete`](Piwik/DataTable/Filter/ColumnDelete.md)
+- [`filter()`](Piwik/DataTable/Filter/ExcludeLowPopulation.md#filter) &mdash; _Method in class_ [`ExcludeLowPopulation`](Piwik/DataTable/Filter/ExcludeLowPopulation.md)
+- [`filter()`](Piwik/DataTable/Filter/GroupBy.md#filter) &mdash; _Method in class_ [`GroupBy`](Piwik/DataTable/Filter/GroupBy.md)
+- [`filter()`](Piwik/DataTable/Filter/Limit.md#filter) &mdash; _Method in class_ [`Limit`](Piwik/DataTable/Filter/Limit.md)
+- [`filter()`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md#filter) &mdash; _Method in class_ [`MetadataCallbackAddMetadata`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md)
+- [`filter()`](Piwik/DataTable/Filter/Truncate.md#filter) &mdash; _Method in class_ [`Truncate`](Piwik/DataTable/Filter/Truncate.md)
 - [`filter()`](Piwik/DataTable/Map.md#filter) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`factory()`](Piwik/Date.md#factory) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`fetchAll()`](Piwik/Db.md#fetchAll) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
@@ -212,6 +238,13 @@ Index
 - [`getSerialized()`](Piwik/DataTable.md#getSerialized) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getMetadata()`](Piwik/DataTable.md#getMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`getAllTableMetadata()`](Piwik/DataTable.md#getAllTableMetadata) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`getSingleUnitLabel()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#getSingleUnitLabel) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
+- [`getRangeLabel()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#getRangeLabel) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
+- [`getUnboundedLabel()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#getUnboundedLabel) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
+- [`getSingleUnitLabel()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#getSingleUnitLabel) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
+- [`getRangeLabel()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#getRangeLabel) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
+- [`getUnboundedLabel()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#getUnboundedLabel) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
+- [`GroupBy`](Piwik/DataTable/Filter/GroupBy.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`getKeyName()`](Piwik/DataTable/Map.md#getKeyName) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`getRowsCount()`](Piwik/DataTable/Map.md#getRowsCount) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`getDataTables()`](Piwik/DataTable/Map.md#getDataTables) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
@@ -427,6 +460,7 @@ Index
 
 ### L
 
+- [`Limit`](Piwik/DataTable/Filter/Limit.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`$lockPrivilegeGranted()`](Piwik/Db.md#$lockPrivilegeGranted) &mdash; _Property in class_ [`Db`](Piwik/Db.md)
 - [`lockTables()`](Piwik/Db.md#lockTables) &mdash; _Method in class_ [`Db`](Piwik/Db.md)
 - [`long2ip()`](Piwik/IP.md#long2ip) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
@@ -440,6 +474,8 @@ Index
 - [`makeFromIndexedArray()`](Piwik/DataTable.md#makeFromIndexedArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`mergeSubtables()`](Piwik/DataTable.md#mergeSubtables) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
 - [`makeFromSimpleArray()`](Piwik/DataTable.md#makeFromSimpleArray) &mdash; _Method in class_ [`DataTable`](Piwik/DataTable.md)
+- [`MetadataCallbackAddMetadata`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
+- [`MetadataCallbackReplace`](Piwik/DataTable/Filter/MetadataCallbackReplace.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`Map`](Piwik/DataTable/Map.md) &mdash; _Class in namespace_ [`Piwik\DataTable`](Piwik/DataTable)
 - [`mergeChildren()`](Piwik/DataTable/Map.md#mergeChildren) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`mergeSubtables()`](Piwik/DataTable/Map.md#mergeSubtables) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
@@ -477,6 +513,7 @@ Index
 - [`processRequest()`](Piwik/API/Request.md#processRequest) &mdash; _Method in class_ [`Request`](Piwik/API/Request.md)
 - [`Period`](Piwik/ArchiveProcessor/Period.md) &mdash; _Class in namespace_ [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
 - [`prefixTable()`](Piwik/Common.md#prefixTable) &mdash; _Method in class_ [`Common`](Piwik/Common.md)
+- [`prependPlusSignToNumber()`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md#prependPlusSignToNumber) &mdash; _Method in class_ [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md)
 - [`P2N()`](Piwik/IP.md#P2N) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`prettyPrint()`](Piwik/IP.md#prettyPrint) &mdash; _Method in class_ [`IP`](Piwik/IP.md)
 - [`Period`](Piwik/Period.md) &mdash; _Class in namespace_ [`Piwik`](Piwik)
@@ -589,6 +626,7 @@ Index
 
 ### T
 
+- [`Truncate`](Piwik/DataTable/Filter/Truncate.md) &mdash; _Class in namespace_ [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
 - [`toString()`](Piwik/Date.md#toString) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`today()`](Piwik/Date.md#today) &mdash; _Method in class_ [`Date`](Piwik/Date.md)
 - [`toString()`](Piwik/Period.md#toString) &mdash; _Method in class_ [`Period`](Piwik/Period.md)
@@ -645,6 +683,21 @@ Index
 - [`__construct()`](Piwik/DataTable/Filter.md#__construct) &mdash; _Method in class_ [`Filter`](Piwik/DataTable/Filter.md)
 - [`__construct()`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md#__construct) &mdash; _Method in class_ [`AddColumnsProcessedMetrics`](Piwik/DataTable/Filter/AddColumnsProcessedMetrics.md)
 - [`__construct()`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md#__construct) &mdash; _Method in class_ [`AddColumnsProcessedMetricsGoal`](Piwik/DataTable/Filter/AddColumnsProcessedMetricsGoal.md)
+- [`__construct()`](Piwik/DataTable/Filter/AddSummaryRow.md#__construct) &mdash; _Method in class_ [`AddSummaryRow`](Piwik/DataTable/Filter/AddSummaryRow.md)
+- [`__construct()`](Piwik/DataTable/Filter/BeautifyRangeLabels.md#__construct) &mdash; _Method in class_ [`BeautifyRangeLabels`](Piwik/DataTable/Filter/BeautifyRangeLabels.md)
+- [`__construct()`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md#__construct) &mdash; _Method in class_ [`BeautifyTimeRangeLabels`](Piwik/DataTable/Filter/BeautifyTimeRangeLabels.md)
+- [`__construct()`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md#__construct) &mdash; _Method in class_ [`CalculateEvolutionFilter`](Piwik/DataTable/Filter/CalculateEvolutionFilter.md)
+- [`__construct()`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md#__construct) &mdash; _Method in class_ [`ColumnCallbackAddColumn`](Piwik/DataTable/Filter/ColumnCallbackAddColumn.md)
+- [`__construct()`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md#__construct) &mdash; _Method in class_ [`ColumnCallbackAddColumnQuotient`](Piwik/DataTable/Filter/ColumnCallbackAddColumnQuotient.md)
+- [`__construct()`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md#__construct) &mdash; _Method in class_ [`ColumnCallbackAddMetadata`](Piwik/DataTable/Filter/ColumnCallbackAddMetadata.md)
+- [`__construct()`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md#__construct) &mdash; _Method in class_ [`ColumnCallbackDeleteRow`](Piwik/DataTable/Filter/ColumnCallbackDeleteRow.md)
+- [`__construct()`](Piwik/DataTable/Filter/ColumnDelete.md#__construct) &mdash; _Method in class_ [`ColumnDelete`](Piwik/DataTable/Filter/ColumnDelete.md)
+- [`__construct()`](Piwik/DataTable/Filter/ExcludeLowPopulation.md#__construct) &mdash; _Method in class_ [`ExcludeLowPopulation`](Piwik/DataTable/Filter/ExcludeLowPopulation.md)
+- [`__construct()`](Piwik/DataTable/Filter/GroupBy.md#__construct) &mdash; _Method in class_ [`GroupBy`](Piwik/DataTable/Filter/GroupBy.md)
+- [`__construct()`](Piwik/DataTable/Filter/Limit.md#__construct) &mdash; _Method in class_ [`Limit`](Piwik/DataTable/Filter/Limit.md)
+- [`__construct()`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md#__construct) &mdash; _Method in class_ [`MetadataCallbackAddMetadata`](Piwik/DataTable/Filter/MetadataCallbackAddMetadata.md)
+- [`__construct()`](Piwik/DataTable/Filter/MetadataCallbackReplace.md#__construct) &mdash; _Method in class_ [`MetadataCallbackReplace`](Piwik/DataTable/Filter/MetadataCallbackReplace.md)
+- [`__construct()`](Piwik/DataTable/Filter/Truncate.md#__construct) &mdash; _Method in class_ [`Truncate`](Piwik/DataTable/Filter/Truncate.md)
 - [`__toString()`](Piwik/DataTable/Map.md#__toString) &mdash; _Method in class_ [`Map`](Piwik/DataTable/Map.md)
 - [`__construct()`](Piwik/DataTable/Row.md#__construct) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
 - [`__sleep()`](Piwik/DataTable/Row.md#__sleep) &mdash; _Method in class_ [`Row`](Piwik/DataTable/Row.md)
